bookstore assignment4